# weather

./: README.md  requirements.txt
data/01-703.train.202009022153/: fb.csv
proto/: README.md
proto/feat1/: CMakeLists.txt  feat1.cpp  feat2.cpp
proto/oflow1/: CMakeLists.txt  optflow1.cpp
proto/rdw/: CMakeLists.txt  rdw1.cpp
src/: CMakeLists.txt  except.hpp  farneback_flow.cpp  farneback_flow.hpp  gradient_ascent.cpp  gradient_ascent.hpp  main.cpp  opticalflow.cpp  opticalflow.hpp  ssim.cpp  ssim.hpp  tvl1_flow.cpp  tvl1_flow.hpp
src/planner/: planner.py
src/rain/: CMakeLists.txt  except.hpp  opticalflow.cpp  ssim.cpp
wrapper/: download.py  rain.py
